@@ -21,6 +21,7 @@ package org.sonarlint.intellij.core;
 
 import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.components.ApplicationComponent;
+
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.net.URL;
@@ -34,6 +35,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+
 import org.jetbrains.annotations.NotNull;
 import org.sonarlint.intellij.util.GlobalLogOutput;
 import org.sonarsource.sonarlint.core.ConnectedSonarLintEngineImpl;
@@ -118,8 +120,13 @@ public class SonarLintEngineFactory extends ApplicationComponent.Adapter {
       for (Path path : directoryStream) {
         globalLogOutput.log("Found plugin: " + path.getFileName().toString(), LogOutput.Level.DEBUG);
 
-        // any attempt to convert path directly to URL or URI will result in having spaces double escaped
-        URL newUrl = new URL(pluginsDir, path.toString());
+        URL newUrl;
+        if ("file".equalsIgnoreCase(pluginsDir.toURI().getScheme())) {
+          newUrl = path.toUri().toURL();
+        } else {
+          // any attempt to convert path directly to URL or URI will result in having spaces double escaped
+          newUrl = new URL(pluginsDir, path.toString());
+        }
         pluginsUrls.add(newUrl);
       }
     }
